# optikz

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
examples/: README.md
src/optikz/core/: llm.py  pipeline.py  render.py
tests/: __init__.py  test_pipeline.py  test_pipeline_smoke.py  test_render.py  test_report.py
